// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._1sz747010,html._1sz747010 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="vxcqh90 x8h63i10 x8h63i13">
+        <div class="_4zl4av0 _1sz74708p _1sz74707l _1sz7470ax _1sz74709t _1sz74705d _1sz747069 _1sz7470i9 _1sz74704j _1sz74704c x8h63i10 x8h63i13 _1sz747033 _1sz747036">
+          <span class="_4zl4av0 _1sz74704x x8h63i0 x8h63i1 x8h63i1t x8h63ia _145m1u4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._4zl4av0 {
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
  border: 0;
  margin: 0;
  padding: 0;
}
._4zl4av1 {
  display: block;
}
._4zl4av2 {
  line-height: 1;
}
._4zl4av3 {
  list-style: none;
}
._4zl4av4 {
  quotes: none;
}
._4zl4av4:before,
._4zl4av4:after {
  content: "";
}
._4zl4av5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._4zl4av6 {
  appearance: none;
}
._4zl4av7 {
  background-color: #0000;
}
._4zl4av8 {
  outline: var(--wlvbfy10) solid transparent;
  transition: outline-color 0.125s;
}
._4zl4av8:focus-visible {
  outline-color: var(--wlvbfym);
}
._4zl4ava {
  color: inherit;
}
._4zl4avb:disabled {
  opacity: 1;
}
._4zl4avb::-ms-expand {
  display: none;
}
._4zl4avd[type="number"] {
  -moz-appearance: textfield;
}
._4zl4avd[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._4zl4avd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._4zl4avd::-ms-clear {
  display: none;
}
._4zl4avd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._4zl4avg {
  color: inherit;
  text-decoration: none;
}
._1sz74700 {
  overflow: hidden;
}
._1sz74701 {
  overflow: scroll;
}
._1sz74702 {
  overflow: visible;
}
._1sz74703 {
  overflow: auto;
}
._1sz74704 {
  -webkit-user-select: none;
  user-select: none;
}
._1sz74705 {
  outline: var(--wlvbfy10) solid transparent;
  transition: outline-color 0.125s;
}
._1sz74705:focus-visible {
  outline-color: var(--wlvbfym);
}
._1sz74706 {
  opacity: 0;
}
._1sz74707 {
  z-index: 0;
}
._1sz74708 {
  z-index: 1;
}
._1sz74709 {
  z-index: 2;
}
._1sz7470a {
  z-index: 90;
}
._1sz7470b {
  z-index: 100;
}
._1sz7470c {
  z-index: 200;
}
._1sz7470d {
  z-index: 290;
}
._1sz7470e {
  z-index: 300;
}
._1sz7470f {
  z-index: 400;
}
._1sz7470g {
  cursor: default;
}
._1sz7470h {
  cursor: pointer;
}
._1sz7470i {
  pointer-events: none;
}
._1sz7470j {
  top: 0;
}
._1sz7470k {
  bottom: 0;
}
._1sz7470l {
  left: 0;
}
._1sz7470m {
  right: 0;
}
._1sz7470n {
  height: 100%;
}
._1sz7470o {
  height: var(--wlvbfy9);
}
._1sz7470p {
  width: 100%;
}
._1sz7470q {
  width: var(--wlvbfy9);
}
._1sz7470r {
  min-width: 0%;
}
._1sz7470s {
  max-width: var(--wlvbfy11);
}
._1sz7470t {
  max-width: var(--wlvbfy12);
}
._1sz7470u {
  max-width: var(--wlvbfy13);
}
._1sz7470v {
  max-width: var(--wlvbfy14);
}
._1sz7470w {
  max-width: fit-content;
}
._1sz7470x {
  transition: var(--wlvbfy5h);
}
._1sz7470y {
  transition: var(--wlvbfy5i);
}
._1sz7470z:active {
  transform: var(--wlvbfy5j);
}
html:not(._1sz747010) ._1sz747011,
html._1sz747010 ._1sz747012 {
  background: var(--wlvbfy1s);
}
html:not(._1sz747010) ._1sz747013,
html._1sz747010 ._1sz747014 {
  background: var(--wlvbfy1t);
}
html:not(._1sz747010) ._1sz747015,
html._1sz747010 ._1sz747016 {
  background: var(--wlvbfy1u);
}
html:not(._1sz747010) ._1sz747017,
html._1sz747010 ._1sz747018 {
  background: var(--wlvbfy1v);
}
html:not(._1sz747010) ._1sz747019,
html._1sz747010 ._1sz74701a {
  background: var(--wlvbfy1w);
}
html:not(._1sz747010) ._1sz74701b,
html._1sz747010 ._1sz74701c {
  background: var(--wlvbfy1x);
}
html:not(._1sz747010) ._1sz74701d,
html._1sz747010 ._1sz74701e {
  background: var(--wlvbfy1y);
}
html:not(._1sz747010) ._1sz74701f,
html._1sz747010 ._1sz74701g {
  background: var(--wlvbfy1z);
}
html:not(._1sz747010) ._1sz74701h,
html._1sz747010 ._1sz74701i {
  background: var(--wlvbfy20);
}
html:not(._1sz747010) ._1sz74701j,
html._1sz747010 ._1sz74701k {
  background: var(--wlvbfy21);
}
html:not(._1sz747010) ._1sz74701l,
html._1sz747010 ._1sz74701m {
  background: var(--wlvbfy22);
}
html:not(._1sz747010) ._1sz74701n,
html._1sz747010 ._1sz74701o {
  background: var(--wlvbfy23);
}
html:not(._1sz747010) ._1sz74701p,
html._1sz747010 ._1sz74701q {
  background: var(--wlvbfy24);
}
html:not(._1sz747010) ._1sz74701r,
html._1sz747010 ._1sz74701s {
  background: var(--wlvbfy25);
}
html:not(._1sz747010) ._1sz74701t,
html._1sz747010 ._1sz74701u {
  background: var(--wlvbfy26);
}
html:not(._1sz747010) ._1sz74701v,
html._1sz747010 ._1sz74701w {
  background: var(--wlvbfy27);
}
html:not(._1sz747010) ._1sz74701x,
html._1sz747010 ._1sz74701y {
  background: var(--wlvbfy28);
}
html:not(._1sz747010) ._1sz74701z,
html._1sz747010 ._1sz747020 {
  background: var(--wlvbfy29);
}
html:not(._1sz747010) ._1sz747021,
html._1sz747010 ._1sz747022 {
  background: var(--wlvbfy2a);
}
html:not(._1sz747010) ._1sz747023,
html._1sz747010 ._1sz747024 {
  background: var(--wlvbfy2b);
}
html:not(._1sz747010) ._1sz747025,
html._1sz747010 ._1sz747026 {
  background: var(--wlvbfy2c);
}
html:not(._1sz747010) ._1sz747027,
html._1sz747010 ._1sz747028 {
  background: var(--wlvbfy2d);
}
html:not(._1sz747010) ._1sz747029,
html._1sz747010 ._1sz74702a {
  background: var(--wlvbfy2e);
}
html:not(._1sz747010) ._1sz74702b,
html._1sz747010 ._1sz74702c {
  background: var(--wlvbfy2f);
}
html:not(._1sz747010) ._1sz74702d,
html._1sz747010 ._1sz74702e {
  background: var(--wlvbfy2g);
}
html:not(._1sz747010) ._1sz74702f,
html._1sz747010 ._1sz74702g {
  background: var(--wlvbfy2h);
}
html:not(._1sz747010) ._1sz74702h,
html._1sz747010 ._1sz74702i {
  background: var(--wlvbfy2i);
}
html:not(._1sz747010) ._1sz74702j,
html._1sz747010 ._1sz74702k {
  background: var(--wlvbfy2j);
}
html:not(._1sz747010) ._1sz74702l,
html._1sz747010 ._1sz74702m {
  background: var(--wlvbfy2k);
}
html:not(._1sz747010) ._1sz74702n,
html._1sz747010 ._1sz74702o {
  background: var(--wlvbfy2l);
}
html:not(._1sz747010) ._1sz74702p,
html._1sz747010 ._1sz74702q {
  background: var(--wlvbfy2m);
}
html:not(._1sz747010) ._1sz74702r,
html._1sz747010 ._1sz74702s {
  background: var(--wlvbfy2n);
}
html:not(._1sz747010) ._1sz74702t,
html._1sz747010 ._1sz74702u {
  background: var(--wlvbfy2o);
}
html:not(._1sz747010) ._1sz74702v,
html._1sz747010 ._1sz74702w {
  background: var(--wlvbfy2p);
}
html:not(._1sz747010) ._1sz74702x,
html._1sz747010 ._1sz74702y {
  background: var(--wlvbfy2q);
}
html:not(._1sz747010) ._1sz74702z,
html._1sz747010 ._1sz747030 {
  background: var(--wlvbfy2r);
}
html:not(._1sz747010) ._1sz747031,
html._1sz747010 ._1sz747032 {
  background: var(--wlvbfy2s);
}
html:not(._1sz747010) ._1sz747033,
html._1sz747010 ._1sz747034 {
  background: var(--wlvbfy2t);
}
html:not(._1sz747010) ._1sz747035,
html._1sz747010 ._1sz747036 {
  background: var(--wlvbfy2u);
}
html:not(._1sz747010) ._1sz747037,
html._1sz747010 ._1sz747038 {
  box-shadow: var(--wlvbfy5k);
}
html:not(._1sz747010) ._1sz747039,
html._1sz747010 ._1sz74703a {
  box-shadow: var(--wlvbfy5l);
}
html:not(._1sz747010) ._1sz74703b,
html._1sz747010 ._1sz74703c {
  box-shadow: var(--wlvbfy5m);
}
html:not(._1sz747010) ._1sz74703d,
html._1sz747010 ._1sz74703e {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyf);
}
html:not(._1sz747010) ._1sz74703f,
html._1sz747010 ._1sz74703g {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyg);
}
html:not(._1sz747010) ._1sz74703h,
html._1sz747010 ._1sz74703i {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfyf);
}
html:not(._1sz747010) ._1sz74703j,
html._1sz747010 ._1sz74703k {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfyg);
}
html:not(._1sz747010) ._1sz74703l,
html._1sz747010 ._1sz74703m {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyh);
}
html:not(._1sz747010) ._1sz74703n,
html._1sz747010 ._1sz74703o {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyi);
}
html:not(._1sz747010) ._1sz74703p,
html._1sz747010 ._1sz74703q {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyj);
}
html:not(._1sz747010) ._1sz74703r,
html._1sz747010 ._1sz74703s {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfyj);
}
html:not(._1sz747010) ._1sz74703t,
html._1sz747010 ._1sz74703u {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyk);
}
html:not(._1sz747010) ._1sz74703v,
html._1sz747010 ._1sz74703w {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfyk);
}
html:not(._1sz747010) ._1sz74703x,
html._1sz747010 ._1sz74703y {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyl);
}
html:not(._1sz747010) ._1sz74703z,
html._1sz747010 ._1sz747040 {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyn);
}
html:not(._1sz747010) ._1sz747041,
html._1sz747010 ._1sz747042 {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfyn);
}
html:not(._1sz747010) ._1sz747043,
html._1sz747010 ._1sz747044 {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyo);
}
html:not(._1sz747010) ._1sz747045,
html._1sz747010 ._1sz747046 {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfyo);
}
html:not(._1sz747010) ._1sz747047,
html._1sz747010 ._1sz747048 {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyp);
}
html:not(._1sz747010) ._1sz747049,
html._1sz747010 ._1sz74704a {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyq);
}
html:not(._1sz747010) ._1sz74704b,
html._1sz747010 ._1sz74704c {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyr);
}
html:not(._1sz747010) ._1sz74704d,
html._1sz747010 ._1sz74704e {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfyr);
}
html:not(._1sz747010) ._1sz74704f,
html._1sz747010 ._1sz74704g {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfys);
}
html:not(._1sz747010) ._1sz74704h,
html._1sz747010 ._1sz74704i {
  box-shadow: inset 0 0 0 var(--wlvbfyz) var(--wlvbfys);
}
html:not(._1sz747010) ._1sz74704j,
html._1sz747010 ._1sz74704k {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyt);
}
html:not(._1sz747010) ._1sz74704l,
html._1sz747010 ._1sz74704m {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyu);
}
html:not(._1sz747010) ._1sz74704n,
html._1sz747010 ._1sz74704o {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyv);
}
html:not(._1sz747010) ._1sz74704p,
html._1sz747010 ._1sz74704q {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyw);
}
html:not(._1sz747010) ._1sz74704r,
html._1sz747010 ._1sz74704s {
  box-shadow: inset 0 0 0 var(--wlvbfyy) var(--wlvbfyx);
}
._1sz74704t {
  display: none;
}
._1sz74704x {
  display: block;
}
._1sz747051 {
  display: inline;
}
._1sz747055 {
  display: inline-block;
}
._1sz747059 {
  display: flex;
}
._1sz74705d {
  position: relative;
}
._1sz74705h {
  position: absolute;
}
._1sz74705l {
  position: fixed;
}
._1sz74705p {
  position: sticky;
}
._1sz74705t {
  border-radius: 0;
}
._1sz74705x {
  border-radius: 9999px;
}
._1sz747061 {
  border-radius: var(--wlvbfyb);
}
._1sz747065 {
  border-radius: var(--wlvbfyc);
}
._1sz747069 {
  border-radius: var(--wlvbfyd);
}
._1sz74706d {
  border-radius: var(--wlvbfye);
}
._1sz74706h {
  gap: var(--wlvbfy0);
}
._1sz74706l {
  gap: var(--wlvbfy1);
}
._1sz74706p {
  gap: var(--wlvbfy2);
}
._1sz74706t {
  gap: var(--wlvbfy3);
}
._1sz74706x {
  gap: var(--wlvbfy4);
}
._1sz747071 {
  gap: var(--wlvbfy5);
}
._1sz747075 {
  gap: var(--wlvbfy6);
}
._1sz747079 {
  gap: var(--wlvbfy7);
}
._1sz74707d {
  gap: var(--wlvbfy8);
}
._1sz74707h {
  gap: 0;
}
._1sz74707l {
  padding-top: var(--wlvbfy0);
}
._1sz74707p {
  padding-top: var(--wlvbfy1);
}
._1sz74707t {
  padding-top: var(--wlvbfy2);
}
._1sz74707x {
  padding-top: var(--wlvbfy3);
}
._1sz747081 {
  padding-top: var(--wlvbfy4);
}
._1sz747085 {
  padding-top: var(--wlvbfy5);
}
._1sz747089 {
  padding-top: var(--wlvbfy6);
}
._1sz74708d {
  padding-top: var(--wlvbfy7);
}
._1sz74708h {
  padding-top: var(--wlvbfy8);
}
._1sz74708l {
  padding-top: 0;
}
._1sz74708p {
  padding-bottom: var(--wlvbfy0);
}
._1sz74708t {
  padding-bottom: var(--wlvbfy1);
}
._1sz74708x {
  padding-bottom: var(--wlvbfy2);
}
._1sz747091 {
  padding-bottom: var(--wlvbfy3);
}
._1sz747095 {
  padding-bottom: var(--wlvbfy4);
}
._1sz747099 {
  padding-bottom: var(--wlvbfy5);
}
._1sz74709d {
  padding-bottom: var(--wlvbfy6);
}
._1sz74709h {
  padding-bottom: var(--wlvbfy7);
}
._1sz74709l {
  padding-bottom: var(--wlvbfy8);
}
._1sz74709p {
  padding-bottom: 0;
}
._1sz74709t {
  padding-right: var(--wlvbfy0);
}
._1sz74709x {
  padding-right: var(--wlvbfy1);
}
._1sz7470a1 {
  padding-right: var(--wlvbfy2);
}
._1sz7470a5 {
  padding-right: var(--wlvbfy3);
}
._1sz7470a9 {
  padding-right: var(--wlvbfy4);
}
._1sz7470ad {
  padding-right: var(--wlvbfy5);
}
._1sz7470ah {
  padding-right: var(--wlvbfy6);
}
._1sz7470al {
  padding-right: var(--wlvbfy7);
}
._1sz7470ap {
  padding-right: var(--wlvbfy8);
}
._1sz7470at {
  padding-right: 0;
}
._1sz7470ax {
  padding-left: var(--wlvbfy0);
}
._1sz7470b1 {
  padding-left: var(--wlvbfy1);
}
._1sz7470b5 {
  padding-left: var(--wlvbfy2);
}
._1sz7470b9 {
  padding-left: var(--wlvbfy3);
}
._1sz7470bd {
  padding-left: var(--wlvbfy4);
}
._1sz7470bh {
  padding-left: var(--wlvbfy5);
}
._1sz7470bl {
  padding-left: var(--wlvbfy6);
}
._1sz7470bp {
  padding-left: var(--wlvbfy7);
}
._1sz7470bt {
  padding-left: var(--wlvbfy8);
}
._1sz7470bx {
  padding-left: 0;
}
._1sz7470c1 {
  margin-top: var(--wlvbfy0);
}
._1sz7470c5 {
  margin-top: var(--wlvbfy1);
}
._1sz7470c9 {
  margin-top: var(--wlvbfy2);
}
._1sz7470cd {
  margin-top: var(--wlvbfy3);
}
._1sz7470ch {
  margin-top: var(--wlvbfy4);
}
._1sz7470cl {
  margin-top: var(--wlvbfy5);
}
._1sz7470cp {
  margin-top: var(--wlvbfy6);
}
._1sz7470ct {
  margin-top: var(--wlvbfy7);
}
._1sz7470cx {
  margin-top: var(--wlvbfy8);
}
._1sz7470d1 {
  margin-top: 0;
}
._1sz7470d5 {
  margin-bottom: var(--wlvbfy0);
}
._1sz7470d9 {
  margin-bottom: var(--wlvbfy1);
}
._1sz7470dd {
  margin-bottom: var(--wlvbfy2);
}
._1sz7470dh {
  margin-bottom: var(--wlvbfy3);
}
._1sz7470dl {
  margin-bottom: var(--wlvbfy4);
}
._1sz7470dp {
  margin-bottom: var(--wlvbfy5);
}
._1sz7470dt {
  margin-bottom: var(--wlvbfy6);
}
._1sz7470dx {
  margin-bottom: var(--wlvbfy7);
}
._1sz7470e1 {
  margin-bottom: var(--wlvbfy8);
}
._1sz7470e5 {
  margin-bottom: 0;
}
._1sz7470e9 {
  margin-right: var(--wlvbfy0);
}
._1sz7470ed {
  margin-right: var(--wlvbfy1);
}
._1sz7470eh {
  margin-right: var(--wlvbfy2);
}
._1sz7470el {
  margin-right: var(--wlvbfy3);
}
._1sz7470ep {
  margin-right: var(--wlvbfy4);
}
._1sz7470et {
  margin-right: var(--wlvbfy5);
}
._1sz7470ex {
  margin-right: var(--wlvbfy6);
}
._1sz7470f1 {
  margin-right: var(--wlvbfy7);
}
._1sz7470f5 {
  margin-right: var(--wlvbfy8);
}
._1sz7470f9 {
  margin-right: 0;
}
._1sz7470fd {
  margin-left: var(--wlvbfy0);
}
._1sz7470fh {
  margin-left: var(--wlvbfy1);
}
._1sz7470fl {
  margin-left: var(--wlvbfy2);
}
._1sz7470fp {
  margin-left: var(--wlvbfy3);
}
._1sz7470ft {
  margin-left: var(--wlvbfy4);
}
._1sz7470fx {
  margin-left: var(--wlvbfy5);
}
._1sz7470g1 {
  margin-left: var(--wlvbfy6);
}
._1sz7470g5 {
  margin-left: var(--wlvbfy7);
}
._1sz7470g9 {
  margin-left: var(--wlvbfy8);
}
._1sz7470gd {
  margin-left: 0;
}
._1sz7470gh {
  align-items: flex-start;
}
._1sz7470gl {
  align-items: center;
}
._1sz7470gp {
  align-items: flex-end;
}
._1sz7470gt {
  justify-content: flex-start;
}
._1sz7470gx {
  justify-content: center;
}
._1sz7470h1 {
  justify-content: flex-end;
}
._1sz7470h5 {
  justify-content: space-between;
}
._1sz7470h9 {
  flex-direction: row;
}
._1sz7470hd {
  flex-direction: row-reverse;
}
._1sz7470hh {
  flex-direction: column;
}
._1sz7470hl {
  flex-direction: column-reverse;
}
._1sz7470hp {
  flex-wrap: wrap;
}
._1sz7470ht {
  flex-wrap: nowrap;
}
._1sz7470hx {
  flex-shrink: 0;
}
._1sz7470i1 {
  flex-grow: 0;
}
._1sz7470i5 {
  flex-grow: 1;
}
._1sz7470i9 {
  text-align: left;
}
._1sz7470id {
  text-align: center;
}
._1sz7470ih {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1sz74704u {
    display: none;
  }
  ._1sz74704y {
    display: block;
  }
  ._1sz747052 {
    display: inline;
  }
  ._1sz747056 {
    display: inline-block;
  }
  ._1sz74705a {
    display: flex;
  }
  ._1sz74705e {
    position: relative;
  }
  ._1sz74705i {
    position: absolute;
  }
  ._1sz74705m {
    position: fixed;
  }
  ._1sz74705q {
    position: sticky;
  }
  ._1sz74705u {
    border-radius: 0;
  }
  ._1sz74705y {
    border-radius: 9999px;
  }
  ._1sz747062 {
    border-radius: var(--wlvbfyb);
  }
  ._1sz747066 {
    border-radius: var(--wlvbfyc);
  }
  ._1sz74706a {
    border-radius: var(--wlvbfyd);
  }
  ._1sz74706e {
    border-radius: var(--wlvbfye);
  }
  ._1sz74706i {
    gap: var(--wlvbfy0);
  }
  ._1sz74706m {
    gap: var(--wlvbfy1);
  }
  ._1sz74706q {
    gap: var(--wlvbfy2);
  }
  ._1sz74706u {
    gap: var(--wlvbfy3);
  }
  ._1sz74706y {
    gap: var(--wlvbfy4);
  }
  ._1sz747072 {
    gap: var(--wlvbfy5);
  }
  ._1sz747076 {
    gap: var(--wlvbfy6);
  }
  ._1sz74707a {
    gap: var(--wlvbfy7);
  }
  ._1sz74707e {
    gap: var(--wlvbfy8);
  }
  ._1sz74707i {
    gap: 0;
  }
  ._1sz74707m {
    padding-top: var(--wlvbfy0);
  }
  ._1sz74707q {
    padding-top: var(--wlvbfy1);
  }
  ._1sz74707u {
    padding-top: var(--wlvbfy2);
  }
  ._1sz74707y {
    padding-top: var(--wlvbfy3);
  }
  ._1sz747082 {
    padding-top: var(--wlvbfy4);
  }
  ._1sz747086 {
    padding-top: var(--wlvbfy5);
  }
  ._1sz74708a {
    padding-top: var(--wlvbfy6);
  }
  ._1sz74708e {
    padding-top: var(--wlvbfy7);
  }
  ._1sz74708i {
    padding-top: var(--wlvbfy8);
  }
  ._1sz74708m {
    padding-top: 0;
  }
  ._1sz74708q {
    padding-bottom: var(--wlvbfy0);
  }
  ._1sz74708u {
    padding-bottom: var(--wlvbfy1);
  }
  ._1sz74708y {
    padding-bottom: var(--wlvbfy2);
  }
  ._1sz747092 {
    padding-bottom: var(--wlvbfy3);
  }
  ._1sz747096 {
    padding-bottom: var(--wlvbfy4);
  }
  ._1sz74709a {
    padding-bottom: var(--wlvbfy5);
  }
  ._1sz74709e {
    padding-bottom: var(--wlvbfy6);
  }
  ._1sz74709i {
    padding-bottom: var(--wlvbfy7);
  }
  ._1sz74709m {
    padding-bottom: var(--wlvbfy8);
  }
  ._1sz74709q {
    padding-bottom: 0;
  }
  ._1sz74709u {
    padding-right: var(--wlvbfy0);
  }
  ._1sz74709y {
    padding-right: var(--wlvbfy1);
  }
  ._1sz7470a2 {
    padding-right: var(--wlvbfy2);
  }
  ._1sz7470a6 {
    padding-right: var(--wlvbfy3);
  }
  ._1sz7470aa {
    padding-right: var(--wlvbfy4);
  }
  ._1sz7470ae {
    padding-right: var(--wlvbfy5);
  }
  ._1sz7470ai {
    padding-right: var(--wlvbfy6);
  }
  ._1sz7470am {
    padding-right: var(--wlvbfy7);
  }
  ._1sz7470aq {
    padding-right: var(--wlvbfy8);
  }
  ._1sz7470au {
    padding-right: 0;
  }
  ._1sz7470ay {
    padding-left: var(--wlvbfy0);
  }
  ._1sz7470b2 {
    padding-left: var(--wlvbfy1);
  }
  ._1sz7470b6 {
    padding-left: var(--wlvbfy2);
  }
  ._1sz7470ba {
    padding-left: var(--wlvbfy3);
  }
  ._1sz7470be {
    padding-left: var(--wlvbfy4);
  }
  ._1sz7470bi {
    padding-left: var(--wlvbfy5);
  }
  ._1sz7470bm {
    padding-left: var(--wlvbfy6);
  }
  ._1sz7470bq {
    padding-left: var(--wlvbfy7);
  }
  ._1sz7470bu {
    padding-left: var(--wlvbfy8);
  }
  ._1sz7470by {
    padding-left: 0;
  }
  ._1sz7470c2 {
    margin-top: var(--wlvbfy0);
  }
  ._1sz7470c6 {
    margin-top: var(--wlvbfy1);
  }
  ._1sz7470ca {
    margin-top: var(--wlvbfy2);
  }
  ._1sz7470ce {
    margin-top: var(--wlvbfy3);
  }
  ._1sz7470ci {
    margin-top: var(--wlvbfy4);
  }
  ._1sz7470cm {
    margin-top: var(--wlvbfy5);
  }
  ._1sz7470cq {
    margin-top: var(--wlvbfy6);
  }
  ._1sz7470cu {
    margin-top: var(--wlvbfy7);
  }
  ._1sz7470cy {
    margin-top: var(--wlvbfy8);
  }
  ._1sz7470d2 {
    margin-top: 0;
  }
  ._1sz7470d6 {
    margin-bottom: var(--wlvbfy0);
  }
  ._1sz7470da {
    margin-bottom: var(--wlvbfy1);
  }
  ._1sz7470de {
    margin-bottom: var(--wlvbfy2);
  }
  ._1sz7470di {
    margin-bottom: var(--wlvbfy3);
  }
  ._1sz7470dm {
    margin-bottom: var(--wlvbfy4);
  }
  ._1sz7470dq {
    margin-bottom: var(--wlvbfy5);
  }
  ._1sz7470du {
    margin-bottom: var(--wlvbfy6);
  }
  ._1sz7470dy {
    margin-bottom: var(--wlvbfy7);
  }
  ._1sz7470e2 {
    margin-bottom: var(--wlvbfy8);
  }
  ._1sz7470e6 {
    margin-bottom: 0;
  }
  ._1sz7470ea {
    margin-right: var(--wlvbfy0);
  }
  ._1sz7470ee {
    margin-right: var(--wlvbfy1);
  }
  ._1sz7470ei {
    margin-right: var(--wlvbfy2);
  }
  ._1sz7470em {
    margin-right: var(--wlvbfy3);
  }
  ._1sz7470eq {
    margin-right: var(--wlvbfy4);
  }
  ._1sz7470eu {
    margin-right: var(--wlvbfy5);
  }
  ._1sz7470ey {
    margin-right: var(--wlvbfy6);
  }
  ._1sz7470f2 {
    margin-right: var(--wlvbfy7);
  }
  ._1sz7470f6 {
    margin-right: var(--wlvbfy8);
  }
  ._1sz7470fa {
    margin-right: 0;
  }
  ._1sz7470fe {
    margin-left: var(--wlvbfy0);
  }
  ._1sz7470fi {
    margin-left: var(--wlvbfy1);
  }
  ._1sz7470fm {
    margin-left: var(--wlvbfy2);
  }
  ._1sz7470fq {
    margin-left: var(--wlvbfy3);
  }
  ._1sz7470fu {
    margin-left: var(--wlvbfy4);
  }
  ._1sz7470fy {
    margin-left: var(--wlvbfy5);
  }
  ._1sz7470g2 {
    margin-left: var(--wlvbfy6);
  }
  ._1sz7470g6 {
    margin-left: var(--wlvbfy7);
  }
  ._1sz7470ga {
    margin-left: var(--wlvbfy8);
  }
  ._1sz7470ge {
    margin-left: 0;
  }
  ._1sz7470gi {
    align-items: flex-start;
  }
  ._1sz7470gm {
    align-items: center;
  }
  ._1sz7470gq {
    align-items: flex-end;
  }
  ._1sz7470gu {
    justify-content: flex-start;
  }
  ._1sz7470gy {
    justify-content: center;
  }
  ._1sz7470h2 {
    justify-content: flex-end;
  }
  ._1sz7470h6 {
    justify-content: space-between;
  }
  ._1sz7470ha {
    flex-direction: row;
  }
  ._1sz7470he {
    flex-direction: row-reverse;
  }
  ._1sz7470hi {
    flex-direction: column;
  }
  ._1sz7470hm {
    flex-direction: column-reverse;
  }
  ._1sz7470hq {
    flex-wrap: wrap;
  }
  ._1sz7470hu {
    flex-wrap: nowrap;
  }
  ._1sz7470hy {
    flex-shrink: 0;
  }
  ._1sz7470i2 {
    flex-grow: 0;
  }
  ._1sz7470i6 {
    flex-grow: 1;
  }
  ._1sz7470ia {
    text-align: left;
  }
  ._1sz7470ie {
    text-align: center;
  }
  ._1sz7470ii {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1sz74704v {
    display: none;
  }
  ._1sz74704z {
    display: block;
  }
  ._1sz747053 {
    display: inline;
  }
  ._1sz747057 {
    display: inline-block;
  }
  ._1sz74705b {
    display: flex;
  }
  ._1sz74705f {
    position: relative;
  }
  ._1sz74705j {
    position: absolute;
  }
  ._1sz74705n {
    position: fixed;
  }
  ._1sz74705r {
    position: sticky;
  }
  ._1sz74705v {
    border-radius: 0;
  }
  ._1sz74705z {
    border-radius: 9999px;
  }
  ._1sz747063 {
    border-radius: var(--wlvbfyb);
  }
  ._1sz747067 {
    border-radius: var(--wlvbfyc);
  }
  ._1sz74706b {
    border-radius: var(--wlvbfyd);
  }
  ._1sz74706f {
    border-radius: var(--wlvbfye);
  }
  ._1sz74706j {
    gap: var(--wlvbfy0);
  }
  ._1sz74706n {
    gap: var(--wlvbfy1);
  }
  ._1sz74706r {
    gap: var(--wlvbfy2);
  }
  ._1sz74706v {
    gap: var(--wlvbfy3);
  }
  ._1sz74706z {
    gap: var(--wlvbfy4);
  }
  ._1sz747073 {
    gap: var(--wlvbfy5);
  }
  ._1sz747077 {
    gap: var(--wlvbfy6);
  }
  ._1sz74707b {
    gap: var(--wlvbfy7);
  }
  ._1sz74707f {
    gap: var(--wlvbfy8);
  }
  ._1sz74707j {
    gap: 0;
  }
  ._1sz74707n {
    padding-top: var(--wlvbfy0);
  }
  ._1sz74707r {
    padding-top: var(--wlvbfy1);
  }
  ._1sz74707v {
    padding-top: var(--wlvbfy2);
  }
  ._1sz74707z {
    padding-top: var(--wlvbfy3);
  }
  ._1sz747083 {
    padding-top: var(--wlvbfy4);
  }
  ._1sz747087 {
    padding-top: var(--wlvbfy5);
  }
  ._1sz74708b {
    padding-top: var(--wlvbfy6);
  }
  ._1sz74708f {
    padding-top: var(--wlvbfy7);
  }
  ._1sz74708j {
    padding-top: var(--wlvbfy8);
  }
  ._1sz74708n {
    padding-top: 0;
  }
  ._1sz74708r {
    padding-bottom: var(--wlvbfy0);
  }
  ._1sz74708v {
    padding-bottom: var(--wlvbfy1);
  }
  ._1sz74708z {
    padding-bottom: var(--wlvbfy2);
  }
  ._1sz747093 {
    padding-bottom: var(--wlvbfy3);
  }
  ._1sz747097 {
    padding-bottom: var(--wlvbfy4);
  }
  ._1sz74709b {
    padding-bottom: var(--wlvbfy5);
  }
  ._1sz74709f {
    padding-bottom: var(--wlvbfy6);
  }
  ._1sz74709j {
    padding-bottom: var(--wlvbfy7);
  }
  ._1sz74709n {
    padding-bottom: var(--wlvbfy8);
  }
  ._1sz74709r {
    padding-bottom: 0;
  }
  ._1sz74709v {
    padding-right: var(--wlvbfy0);
  }
  ._1sz74709z {
    padding-right: var(--wlvbfy1);
  }
  ._1sz7470a3 {
    padding-right: var(--wlvbfy2);
  }
  ._1sz7470a7 {
    padding-right: var(--wlvbfy3);
  }
  ._1sz7470ab {
    padding-right: var(--wlvbfy4);
  }
  ._1sz7470af {
    padding-right: var(--wlvbfy5);
  }
  ._1sz7470aj {
    padding-right: var(--wlvbfy6);
  }
  ._1sz7470an {
    padding-right: var(--wlvbfy7);
  }
  ._1sz7470ar {
    padding-right: var(--wlvbfy8);
  }
  ._1sz7470av {
    padding-right: 0;
  }
  ._1sz7470az {
    padding-left: var(--wlvbfy0);
  }
  ._1sz7470b3 {
    padding-left: var(--wlvbfy1);
  }
  ._1sz7470b7 {
    padding-left: var(--wlvbfy2);
  }
  ._1sz7470bb {
    padding-left: var(--wlvbfy3);
  }
  ._1sz7470bf {
    padding-left: var(--wlvbfy4);
  }
  ._1sz7470bj {
    padding-left: var(--wlvbfy5);
  }
  ._1sz7470bn {
    padding-left: var(--wlvbfy6);
  }
  ._1sz7470br {
    padding-left: var(--wlvbfy7);
  }
  ._1sz7470bv {
    padding-left: var(--wlvbfy8);
  }
  ._1sz7470bz {
    padding-left: 0;
  }
  ._1sz7470c3 {
    margin-top: var(--wlvbfy0);
  }
  ._1sz7470c7 {
    margin-top: var(--wlvbfy1);
  }
  ._1sz7470cb {
    margin-top: var(--wlvbfy2);
  }
  ._1sz7470cf {
    margin-top: var(--wlvbfy3);
  }
  ._1sz7470cj {
    margin-top: var(--wlvbfy4);
  }
  ._1sz7470cn {
    margin-top: var(--wlvbfy5);
  }
  ._1sz7470cr {
    margin-top: var(--wlvbfy6);
  }
  ._1sz7470cv {
    margin-top: var(--wlvbfy7);
  }
  ._1sz7470cz {
    margin-top: var(--wlvbfy8);
  }
  ._1sz7470d3 {
    margin-top: 0;
  }
  ._1sz7470d7 {
    margin-bottom: var(--wlvbfy0);
  }
  ._1sz7470db {
    margin-bottom: var(--wlvbfy1);
  }
  ._1sz7470df {
    margin-bottom: var(--wlvbfy2);
  }
  ._1sz7470dj {
    margin-bottom: var(--wlvbfy3);
  }
  ._1sz7470dn {
    margin-bottom: var(--wlvbfy4);
  }
  ._1sz7470dr {
    margin-bottom: var(--wlvbfy5);
  }
  ._1sz7470dv {
    margin-bottom: var(--wlvbfy6);
  }
  ._1sz7470dz {
    margin-bottom: var(--wlvbfy7);
  }
  ._1sz7470e3 {
    margin-bottom: var(--wlvbfy8);
  }
  ._1sz7470e7 {
    margin-bottom: 0;
  }
  ._1sz7470eb {
    margin-right: var(--wlvbfy0);
  }
  ._1sz7470ef {
    margin-right: var(--wlvbfy1);
  }
  ._1sz7470ej {
    margin-right: var(--wlvbfy2);
  }
  ._1sz7470en {
    margin-right: var(--wlvbfy3);
  }
  ._1sz7470er {
    margin-right: var(--wlvbfy4);
  }
  ._1sz7470ev {
    margin-right: var(--wlvbfy5);
  }
  ._1sz7470ez {
    margin-right: var(--wlvbfy6);
  }
  ._1sz7470f3 {
    margin-right: var(--wlvbfy7);
  }
  ._1sz7470f7 {
    margin-right: var(--wlvbfy8);
  }
  ._1sz7470fb {
    margin-right: 0;
  }
  ._1sz7470ff {
    margin-left: var(--wlvbfy0);
  }
  ._1sz7470fj {
    margin-left: var(--wlvbfy1);
  }
  ._1sz7470fn {
    margin-left: var(--wlvbfy2);
  }
  ._1sz7470fr {
    margin-left: var(--wlvbfy3);
  }
  ._1sz7470fv {
    margin-left: var(--wlvbfy4);
  }
  ._1sz7470fz {
    margin-left: var(--wlvbfy5);
  }
  ._1sz7470g3 {
    margin-left: var(--wlvbfy6);
  }
  ._1sz7470g7 {
    margin-left: var(--wlvbfy7);
  }
  ._1sz7470gb {
    margin-left: var(--wlvbfy8);
  }
  ._1sz7470gf {
    margin-left: 0;
  }
  ._1sz7470gj {
    align-items: flex-start;
  }
  ._1sz7470gn {
    align-items: center;
  }
  ._1sz7470gr {
    align-items: flex-end;
  }
  ._1sz7470gv {
    justify-content: flex-start;
  }
  ._1sz7470gz {
    justify-content: center;
  }
  ._1sz7470h3 {
    justify-content: flex-end;
  }
  ._1sz7470h7 {
    justify-content: space-between;
  }
  ._1sz7470hb {
    flex-direction: row;
  }
  ._1sz7470hf {
    flex-direction: row-reverse;
  }
  ._1sz7470hj {
    flex-direction: column;
  }
  ._1sz7470hn {
    flex-direction: column-reverse;
  }
  ._1sz7470hr {
    flex-wrap: wrap;
  }
  ._1sz7470hv {
    flex-wrap: nowrap;
  }
  ._1sz7470hz {
    flex-shrink: 0;
  }
  ._1sz7470i3 {
    flex-grow: 0;
  }
  ._1sz7470i7 {
    flex-grow: 1;
  }
  ._1sz7470ib {
    text-align: left;
  }
  ._1sz7470if {
    text-align: center;
  }
  ._1sz7470ij {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1sz74704w {
    display: none;
  }
  ._1sz747050 {
    display: block;
  }
  ._1sz747054 {
    display: inline;
  }
  ._1sz747058 {
    display: inline-block;
  }
  ._1sz74705c {
    display: flex;
  }
  ._1sz74705g {
    position: relative;
  }
  ._1sz74705k {
    position: absolute;
  }
  ._1sz74705o {
    position: fixed;
  }
  ._1sz74705s {
    position: sticky;
  }
  ._1sz74705w {
    border-radius: 0;
  }
  ._1sz747060 {
    border-radius: 9999px;
  }
  ._1sz747064 {
    border-radius: var(--wlvbfyb);
  }
  ._1sz747068 {
    border-radius: var(--wlvbfyc);
  }
  ._1sz74706c {
    border-radius: var(--wlvbfyd);
  }
  ._1sz74706g {
    border-radius: var(--wlvbfye);
  }
  ._1sz74706k {
    gap: var(--wlvbfy0);
  }
  ._1sz74706o {
    gap: var(--wlvbfy1);
  }
  ._1sz74706s {
    gap: var(--wlvbfy2);
  }
  ._1sz74706w {
    gap: var(--wlvbfy3);
  }
  ._1sz747070 {
    gap: var(--wlvbfy4);
  }
  ._1sz747074 {
    gap: var(--wlvbfy5);
  }
  ._1sz747078 {
    gap: var(--wlvbfy6);
  }
  ._1sz74707c {
    gap: var(--wlvbfy7);
  }
  ._1sz74707g {
    gap: var(--wlvbfy8);
  }
  ._1sz74707k {
    gap: 0;
  }
  ._1sz74707o {
    padding-top: var(--wlvbfy0);
  }
  ._1sz74707s {
    padding-top: var(--wlvbfy1);
  }
  ._1sz74707w {
    padding-top: var(--wlvbfy2);
  }
  ._1sz747080 {
    padding-top: var(--wlvbfy3);
  }
  ._1sz747084 {
    padding-top: var(--wlvbfy4);
  }
  ._1sz747088 {
    padding-top: var(--wlvbfy5);
  }
  ._1sz74708c {
    padding-top: var(--wlvbfy6);
  }
  ._1sz74708g {
    padding-top: var(--wlvbfy7);
  }
  ._1sz74708k {
    padding-top: var(--wlvbfy8);
  }
  ._1sz74708o {
    padding-top: 0;
  }
  ._1sz74708s {
    padding-bottom: var(--wlvbfy0);
  }
  ._1sz74708w {
    padding-bottom: var(--wlvbfy1);
  }
  ._1sz747090 {
    padding-bottom: var(--wlvbfy2);
  }
  ._1sz747094 {
    padding-bottom: var(--wlvbfy3);
  }
  ._1sz747098 {
    padding-bottom: var(--wlvbfy4);
  }
  ._1sz74709c {
    padding-bottom: var(--wlvbfy5);
  }
  ._1sz74709g {
    padding-bottom: var(--wlvbfy6);
  }
  ._1sz74709k {
    padding-bottom: var(--wlvbfy7);
  }
  ._1sz74709o {
    padding-bottom: var(--wlvbfy8);
  }
  ._1sz74709s {
    padding-bottom: 0;
  }
  ._1sz74709w {
    padding-right: var(--wlvbfy0);
  }
  ._1sz7470a0 {
    padding-right: var(--wlvbfy1);
  }
  ._1sz7470a4 {
    padding-right: var(--wlvbfy2);
  }
  ._1sz7470a8 {
    padding-right: var(--wlvbfy3);
  }
  ._1sz7470ac {
    padding-right: var(--wlvbfy4);
  }
  ._1sz7470ag {
    padding-right: var(--wlvbfy5);
  }
  ._1sz7470ak {
    padding-right: var(--wlvbfy6);
  }
  ._1sz7470ao {
    padding-right: var(--wlvbfy7);
  }
  ._1sz7470as {
    padding-right: var(--wlvbfy8);
  }
  ._1sz7470aw {
    padding-right: 0;
  }
  ._1sz7470b0 {
    padding-left: var(--wlvbfy0);
  }
  ._1sz7470b4 {
    padding-left: var(--wlvbfy1);
  }
  ._1sz7470b8 {
    padding-left: var(--wlvbfy2);
  }
  ._1sz7470bc {
    padding-left: var(--wlvbfy3);
  }
  ._1sz7470bg {
    padding-left: var(--wlvbfy4);
  }
  ._1sz7470bk {
    padding-left: var(--wlvbfy5);
  }
  ._1sz7470bo {
    padding-left: var(--wlvbfy6);
  }
  ._1sz7470bs {
    padding-left: var(--wlvbfy7);
  }
  ._1sz7470bw {
    padding-left: var(--wlvbfy8);
  }
  ._1sz7470c0 {
    padding-left: 0;
  }
  ._1sz7470c4 {
    margin-top: var(--wlvbfy0);
  }
  ._1sz7470c8 {
    margin-top: var(--wlvbfy1);
  }
  ._1sz7470cc {
    margin-top: var(--wlvbfy2);
  }
  ._1sz7470cg {
    margin-top: var(--wlvbfy3);
  }
  ._1sz7470ck {
    margin-top: var(--wlvbfy4);
  }
  ._1sz7470co {
    margin-top: var(--wlvbfy5);
  }
  ._1sz7470cs {
    margin-top: var(--wlvbfy6);
  }
  ._1sz7470cw {
    margin-top: var(--wlvbfy7);
  }
  ._1sz7470d0 {
    margin-top: var(--wlvbfy8);
  }
  ._1sz7470d4 {
    margin-top: 0;
  }
  ._1sz7470d8 {
    margin-bottom: var(--wlvbfy0);
  }
  ._1sz7470dc {
    margin-bottom: var(--wlvbfy1);
  }
  ._1sz7470dg {
    margin-bottom: var(--wlvbfy2);
  }
  ._1sz7470dk {
    margin-bottom: var(--wlvbfy3);
  }
  ._1sz7470do {
    margin-bottom: var(--wlvbfy4);
  }
  ._1sz7470ds {
    margin-bottom: var(--wlvbfy5);
  }
  ._1sz7470dw {
    margin-bottom: var(--wlvbfy6);
  }
  ._1sz7470e0 {
    margin-bottom: var(--wlvbfy7);
  }
  ._1sz7470e4 {
    margin-bottom: var(--wlvbfy8);
  }
  ._1sz7470e8 {
    margin-bottom: 0;
  }
  ._1sz7470ec {
    margin-right: var(--wlvbfy0);
  }
  ._1sz7470eg {
    margin-right: var(--wlvbfy1);
  }
  ._1sz7470ek {
    margin-right: var(--wlvbfy2);
  }
  ._1sz7470eo {
    margin-right: var(--wlvbfy3);
  }
  ._1sz7470es {
    margin-right: var(--wlvbfy4);
  }
  ._1sz7470ew {
    margin-right: var(--wlvbfy5);
  }
  ._1sz7470f0 {
    margin-right: var(--wlvbfy6);
  }
  ._1sz7470f4 {
    margin-right: var(--wlvbfy7);
  }
  ._1sz7470f8 {
    margin-right: var(--wlvbfy8);
  }
  ._1sz7470fc {
    margin-right: 0;
  }
  ._1sz7470fg {
    margin-left: var(--wlvbfy0);
  }
  ._1sz7470fk {
    margin-left: var(--wlvbfy1);
  }
  ._1sz7470fo {
    margin-left: var(--wlvbfy2);
  }
  ._1sz7470fs {
    margin-left: var(--wlvbfy3);
  }
  ._1sz7470fw {
    margin-left: var(--wlvbfy4);
  }
  ._1sz7470g0 {
    margin-left: var(--wlvbfy5);
  }
  ._1sz7470g4 {
    margin-left: var(--wlvbfy6);
  }
  ._1sz7470g8 {
    margin-left: var(--wlvbfy7);
  }
  ._1sz7470gc {
    margin-left: var(--wlvbfy8);
  }
  ._1sz7470gg {
    margin-left: 0;
  }
  ._1sz7470gk {
    align-items: flex-start;
  }
  ._1sz7470go {
    align-items: center;
  }
  ._1sz7470gs {
    align-items: flex-end;
  }
  ._1sz7470gw {
    justify-content: flex-start;
  }
  ._1sz7470h0 {
    justify-content: center;
  }
  ._1sz7470h4 {
    justify-content: flex-end;
  }
  ._1sz7470h8 {
    justify-content: space-between;
  }
  ._1sz7470hc {
    flex-direction: row;
  }
  ._1sz7470hg {
    flex-direction: row-reverse;
  }
  ._1sz7470hk {
    flex-direction: column;
  }
  ._1sz7470ho {
    flex-direction: column-reverse;
  }
  ._1sz7470hs {
    flex-wrap: wrap;
  }
  ._1sz7470hw {
    flex-wrap: nowrap;
  }
  ._1sz7470i0 {
    flex-shrink: 0;
  }
  ._1sz7470i4 {
    flex-grow: 0;
  }
  ._1sz7470i8 {
    flex-grow: 1;
  }
  ._1sz7470ic {
    text-align: left;
  }
  ._1sz7470ig {
    text-align: center;
  }
  ._1sz7470ik {
    text-align: right;
  }
}
.vxcqh90 {
  --wlvbfy0: 24px;
  --wlvbfy1: 8px;
  --wlvbfy2: 12px;
  --wlvbfy3: 16px;
  --wlvbfy4: 24px;
  --wlvbfy5: 32px;
  --wlvbfy6: 48px;
  --wlvbfy7: 64px;
  --wlvbfy8: 96px;
  --wlvbfy9: 48px;
  --wlvbfya: 4px;
  --wlvbfyb: 4px;
  --wlvbfyc: 8px;
  --wlvbfyd: 16px;
  --wlvbfye: 24px;
  --wlvbfyf: #e60278;
  --wlvbfyg: #f8b1dc;
  --wlvbfyh: #fdc221;
  --wlvbfyi: #fee384;
  --wlvbfyj: #b91e1e;
  --wlvbfyk: #fb999a;
  --wlvbfyl: #838fa5;
  --wlvbfym: #99bff7b3;
  --wlvbfyn: #1e47a9;
  --wlvbfyo: #99bff7;
  --wlvbfyp: #1d559d;
  --wlvbfyq: #98c9f1;
  --wlvbfyr: #2e3849;
  --wlvbfyt: #eaecf1;
  --wlvbfys: #fff;
  --wlvbfyu: #12784f;
  --wlvbfyv: #8bdec5;
  --wlvbfyw: #7f35a9;
  --wlvbfyx: #e1b2f5;
  --wlvbfyy: 2px;
  --wlvbfyz: 4px;
  --wlvbfy10: 6px;
  --wlvbfy11: 400px;
  --wlvbfy12: 660px;
  --wlvbfy13: 940px;
  --wlvbfy14: 1280px;
  --wlvbfy15: #e60278;
  --wlvbfy16: #f8b1dc;
  --wlvbfy17: #723d02;
  --wlvbfy18: #fee384;
  --wlvbfy19: #b91e1e;
  --wlvbfy1a: #fb999a;
  --wlvbfy1b: #1e47a9;
  --wlvbfy1c: #99bff7;
  --wlvbfy1d: #1d559d;
  --wlvbfy1e: #98c9f1;
  --wlvbfy1f: #2e3849;
  --wlvbfy1h: #fff;
  --wlvbfy1g: #2e3849;
  --wlvbfy1i: #5b2084;
  --wlvbfy1j: #f0d6fa;
  --wlvbfy1k: #2e3849;
  --wlvbfy1l: #fff;
  --wlvbfy1m: #12784f;
  --wlvbfy1n: #8bdec5;
  --wlvbfy1o: #7f35a9;
  --wlvbfy1p: #e1b2f5;
  --wlvbfy1q: #5a6881;
  --wlvbfy1r: #ffffffa6;
  --wlvbfy1s: #fff;
  --wlvbfy1t: #1c2330;
  --wlvbfy1u: #051a49;
  --wlvbfy1v: #e60278;
  --wlvbfy1w: #cd026b;
  --wlvbfy1x: #fd0585;
  --wlvbfy1y: #feeffa;
  --wlvbfy1z: #fdd7f3;
  --wlvbfy20: #fde3f6;
  --wlvbfy21: #fdc221;
  --wlvbfy22: #fef8de;
  --wlvbfy23: #b91e1e;
  --wlvbfy24: #a31a1a;
  --wlvbfy25: #db1616;
  --wlvbfy26: #ffe3e2;
  --wlvbfy27: #fef3f3;
  --wlvbfy28: #fcdbdb;
  --wlvbfy29: #fde7e7;
  --wlvbfy2a: #1e47a9;
  --wlvbfy2b: #1a3e93;
  --wlvbfy2c: #2455c9;
  --wlvbfy2d: #f0f7fe;
  --wlvbfy2e: #d8eafc;
  --wlvbfy2f: #e4f1fd;
  --wlvbfy2g: #1d559d;
  --wlvbfy2h: #e3f2fb;
  --wlvbfy2i: #2e3849;
  --wlvbfy2j: #242c39;
  --wlvbfy2k: #384459;
  --wlvbfy2l: #f3f5f7;
  --wlvbfy2m: #f3f5f7;
  --wlvbfy2n: #e4e8ed;
  --wlvbfy2o: #ebeff2;
  --wlvbfy2p: #12784f;
  --wlvbfy2q: #e2f7f1;
  --wlvbfy2r: #7f35a9;
  --wlvbfy2s: #f9ebfd;
  --wlvbfy2t: #fff;
  --wlvbfy2u: #1c2330;
  --wlvbfy2v: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --wlvbfy2w: 783;
  --wlvbfy2x: 1057;
  --wlvbfy2y: -274;
  --wlvbfy2z: 0;
  --wlvbfy30: 1000;
  --wlvbfy3v: 18px;
  --wlvbfy3w: 27.094px;
  --wlvbfy3x: 14.094px;
  --wlvbfy3y: -0.3611em;
  --wlvbfy3z: -0.3611em;
  --wlvbfy40: 18px;
  --wlvbfy41: 27.094px;
  --wlvbfy42: 14.094px;
  --wlvbfy43: -0.3611em;
  --wlvbfy44: -0.3611em;
  --wlvbfy3l: 16px;
  --wlvbfy3m: 24.528px;
  --wlvbfy3n: 12.528px;
  --wlvbfy3o: -0.375em;
  --wlvbfy3p: -0.375em;
  --wlvbfy3q: 16px;
  --wlvbfy3r: 24.528px;
  --wlvbfy3s: 12.528px;
  --wlvbfy3t: -0.375em;
  --wlvbfy3u: -0.375em;
  --wlvbfy3b: 14px;
  --wlvbfy3c: 20.962px;
  --wlvbfy3d: 10.962px;
  --wlvbfy3e: -0.3571em;
  --wlvbfy3f: -0.3571em;
  --wlvbfy3g: 14px;
  --wlvbfy3h: 20.962px;
  --wlvbfy3i: 10.962px;
  --wlvbfy3j: -0.3571em;
  --wlvbfy3k: -0.3571em;
  --wlvbfy31: 12px;
  --wlvbfy32: 18.396px;
  --wlvbfy33: 9.396px;
  --wlvbfy34: -0.375em;
  --wlvbfy35: -0.375em;
  --wlvbfy36: 12px;
  --wlvbfy37: 18.396px;
  --wlvbfy38: 9.396px;
  --wlvbfy39: -0.375em;
  --wlvbfy3a: -0.375em;
  --wlvbfy45: 400;
  --wlvbfy46: 600;
  --wlvbfy47: 700;
  --wlvbfy48: 28px;
  --wlvbfy49: 38.924px;
  --wlvbfy4a: 21.924px;
  --wlvbfy4b: -0.3036em;
  --wlvbfy4c: -0.3036em;
  --wlvbfy4d: 36px;
  --wlvbfy4e: 50.188px;
  --wlvbfy4f: 28.188px;
  --wlvbfy4g: -0.3056em;
  --wlvbfy4h: -0.3056em;
  --wlvbfy4i: 24px;
  --wlvbfy4j: 33.792px;
  --wlvbfy4k: 18.792px;
  --wlvbfy4l: -0.3125em;
  --wlvbfy4m: -0.3125em;
  --wlvbfy4n: 30px;
  --wlvbfy4o: 41.49px;
  --wlvbfy4p: 23.49px;
  --wlvbfy4q: -0.3em;
  --wlvbfy4r: -0.3em;
  --wlvbfy4s: 22px;
  --wlvbfy4t: 31.226px;
  --wlvbfy4u: 17.226px;
  --wlvbfy4v: -0.3182em;
  --wlvbfy4w: -0.3182em;
  --wlvbfy4x: 24px;
  --wlvbfy4y: 33.792px;
  --wlvbfy4z: 18.792px;
  --wlvbfy50: -0.3125em;
  --wlvbfy51: -0.3125em;
  --wlvbfy52: 20px;
  --wlvbfy53: 27.66px;
  --wlvbfy54: 15.66px;
  --wlvbfy55: -0.3em;
  --wlvbfy56: -0.3em;
  --wlvbfy57: 20px;
  --wlvbfy58: 27.66px;
  --wlvbfy59: 15.66px;
  --wlvbfy5a: -0.3em;
  --wlvbfy5b: -0.3em;
  --wlvbfy5c: 400;
  --wlvbfy5d: 600;
  --wlvbfy5e: underline;
  --wlvbfy5f: 24px;
  --wlvbfy5g: 20px;
  --wlvbfy5h: transform 0.125s ease, opacity 0.125s ease;
  --wlvbfy5i: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --wlvbfy5j: scale(0.95);
  --wlvbfy5k: 0 0 4px 0 #1c233014, 0 4px 8px -2px #1c233014;
  --wlvbfy5l: 0 0 8px 0 #1c233014, 0 8px 16px -4px #1c233014;
  --wlvbfy5m: 0 0 12px 0 #1c233014, 0 12px 24px -6px #1c233014;
}
._145m1u4 {
  font-size: var(--_145m1u0);
  line-height: var(--_145m1u1);
}
._145m1u4:before {
  content: "";
  margin-bottom: var(--_145m1u2);
  display: table;
}
._145m1u4:after {
  content: "";
  margin-top: var(--_145m1u3);
  display: table;
}
.x8h63i0 {
  font-family: var(--wlvbfy2v);
}
.x8h63i1 {
  font-weight: var(--wlvbfy45);
}
.x8h63i2 {
  font-weight: var(--wlvbfy46);
}
.x8h63i3 {
  font-weight: var(--wlvbfy47);
}
.x8h63i4 {
  --_145m1u0: var(--wlvbfy31);
  --_145m1u1: var(--wlvbfy32);
  --_145m1u2: var(--wlvbfy34);
  --_145m1u3: var(--wlvbfy35);
}
.x8h63i6 {
  --_145m1u0: var(--wlvbfy3b);
  --_145m1u1: var(--wlvbfy3c);
  --_145m1u2: var(--wlvbfy3e);
  --_145m1u3: var(--wlvbfy3f);
}
.x8h63i8 {
  --_145m1u0: var(--wlvbfy3l);
  --_145m1u1: var(--wlvbfy3m);
  --_145m1u2: var(--wlvbfy3o);
  --_145m1u3: var(--wlvbfy3p);
}
.x8h63ia {
  --_145m1u0: var(--wlvbfy3v);
  --_145m1u1: var(--wlvbfy3w);
  --_145m1u2: var(--wlvbfy3y);
  --_145m1u3: var(--wlvbfy3z);
}
.x8h63ic {
  font-size: var(--wlvbfy31);
  line-height: var(--wlvbfy32);
}
.x8h63id {
  font-size: var(--wlvbfy3b);
  line-height: var(--wlvbfy3c);
}
.x8h63ie {
  font-size: var(--wlvbfy3l);
  line-height: var(--wlvbfy3m);
}
.x8h63if {
  font-size: var(--wlvbfy3v);
  line-height: var(--wlvbfy3w);
}
.x8h63ig {
  font-weight: var(--wlvbfy5c);
}
.x8h63ih {
  font-weight: var(--wlvbfy5d);
}
.x8h63ii {
  --_145m1u0: var(--wlvbfy48);
  --_145m1u1: var(--wlvbfy49);
  --_145m1u2: var(--wlvbfy4b);
  --_145m1u3: var(--wlvbfy4c);
}
.x8h63ik {
  --_145m1u0: var(--wlvbfy4i);
  --_145m1u1: var(--wlvbfy4j);
  --_145m1u2: var(--wlvbfy4l);
  --_145m1u3: var(--wlvbfy4m);
}
.x8h63im {
  --_145m1u0: var(--wlvbfy4s);
  --_145m1u1: var(--wlvbfy4t);
  --_145m1u2: var(--wlvbfy4v);
  --_145m1u3: var(--wlvbfy4w);
}
.x8h63io {
  --_145m1u0: var(--wlvbfy52);
  --_145m1u1: var(--wlvbfy53);
  --_145m1u2: var(--wlvbfy55);
  --_145m1u3: var(--wlvbfy56);
}
html:not(._1sz747010) .x8h63i10 {
  --x8h63iq: var(--wlvbfy19);
  --x8h63ir: var(--wlvbfy17);
  --x8h63is: var(--wlvbfy1d);
  --x8h63it: var(--wlvbfy1o);
  --x8h63iu: var(--wlvbfy1m);
  --x8h63iv: var(--wlvbfy15);
  --x8h63iw: var(--wlvbfy1b);
  --x8h63ix: var(--wlvbfy1k);
  --x8h63iy: var(--wlvbfy1q);
  --x8h63iz: var(--wlvbfy1f);
}
html:not(._1sz747010) .x8h63i11 {
  --x8h63iq: var(--wlvbfy1a);
  --x8h63ir: var(--wlvbfy18);
  --x8h63is: var(--wlvbfy1e);
  --x8h63it: var(--wlvbfy1p);
  --x8h63iu: var(--wlvbfy1n);
  --x8h63iv: var(--wlvbfy16);
  --x8h63iw: var(--wlvbfy1c);
  --x8h63ix: var(--wlvbfy1l);
  --x8h63iy: var(--wlvbfy1r);
  --x8h63iz: var(--wlvbfy1h);
}
html._1sz747010 .x8h63i12 {
  --x8h63iq: var(--wlvbfy19);
  --x8h63ir: var(--wlvbfy17);
  --x8h63is: var(--wlvbfy1d);
  --x8h63it: var(--wlvbfy1o);
  --x8h63iu: var(--wlvbfy1m);
  --x8h63iv: var(--wlvbfy15);
  --x8h63iw: var(--wlvbfy1b);
  --x8h63ix: var(--wlvbfy1k);
  --x8h63iy: var(--wlvbfy1q);
  --x8h63iz: var(--wlvbfy1f);
}
html._1sz747010 .x8h63i13 {
  --x8h63iq: var(--wlvbfy1a);
  --x8h63ir: var(--wlvbfy18);
  --x8h63is: var(--wlvbfy1e);
  --x8h63it: var(--wlvbfy1p);
  --x8h63iu: var(--wlvbfy1n);
  --x8h63iv: var(--wlvbfy16);
  --x8h63iw: var(--wlvbfy1c);
  --x8h63ix: var(--wlvbfy1l);
  --x8h63iy: var(--wlvbfy1r);
  --x8h63iz: var(--wlvbfy1h);
}
html:not(._1sz747010) .x8h63i14,
html:not(._1sz747010) .x8h63i15,
html:not(._1sz747010) .x8h63i16,
html:not(._1sz747010) .x8h63i17 {
  --x8h63ix: var(--x8h63iq);
}
html:not(._1sz747010) .x8h63i18,
html:not(._1sz747010) .x8h63i19 {
  --x8h63ix: var(--x8h63ir);
}
html:not(._1sz747010) .x8h63i1a {
  --x8h63ix: var(--x8h63iu);
}
html:not(._1sz747010) .x8h63i1b {
  --x8h63ix: var(--x8h63is);
}
html:not(._1sz747010) .x8h63i1c {
  --x8h63ix: var(--x8h63it);
}
html._1sz747010 .x8h63i1d,
html._1sz747010 .x8h63i1e,
html._1sz747010 .x8h63i1f,
html._1sz747010 .x8h63i1g {
  --x8h63ix: var(--x8h63iq);
}
html._1sz747010 .x8h63i1h,
html._1sz747010 .x8h63i1i {
  --x8h63ix: var(--x8h63ir);
}
html._1sz747010 .x8h63i1j {
  --x8h63ix: var(--x8h63iu);
}
html._1sz747010 .x8h63i1k {
  --x8h63ix: var(--x8h63is);
}
html._1sz747010 .x8h63i1l {
  --x8h63ix: var(--x8h63it);
}
.x8h63i1m {
  color: var(--x8h63iq);
}
.x8h63i1n {
  color: var(--x8h63ir);
}
.x8h63i1o {
  color: var(--x8h63is);
}
.x8h63i1p {
  color: var(--x8h63it);
}
.x8h63i1q {
  color: var(--x8h63iu);
}
.x8h63i1r {
  color: var(--x8h63iv);
}
.x8h63i1s {
  color: var(--x8h63iw);
}
.x8h63i1t {
  color: var(--x8h63ix);
}
.x8h63i1u {
  color: var(--x8h63iy);
}
.x8h63i1v {
  color: var(--x8h63iz);
}
.x8h63i1w {
  padding-top: calc((var(--wlvbfy9) - var(--wlvbfy32)) / 2);
  padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy32)) / 2);
}
.x8h63i1x {
  padding-top: calc((var(--wlvbfy9) - var(--wlvbfy3c)) / 2);
  padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy3c)) / 2);
}
.x8h63i1y {
  padding-top: calc((var(--wlvbfy9) - var(--wlvbfy3m)) / 2);
  padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy3m)) / 2);
}
.x8h63i1z {
  padding-top: calc((var(--wlvbfy9) - var(--wlvbfy3w)) / 2);
  padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy3w)) / 2);
}
@media screen and (min-width: 740px) {
  .x8h63i4 {
    --_145m1u0: var(--wlvbfy36);
    --_145m1u1: var(--wlvbfy37);
    --_145m1u2: var(--wlvbfy39);
    --_145m1u3: var(--wlvbfy3a);
  }
  .x8h63i6 {
    --_145m1u0: var(--wlvbfy3g);
    --_145m1u1: var(--wlvbfy3h);
    --_145m1u2: var(--wlvbfy3j);
    --_145m1u3: var(--wlvbfy3k);
  }
  .x8h63i8 {
    --_145m1u0: var(--wlvbfy3q);
    --_145m1u1: var(--wlvbfy3r);
    --_145m1u2: var(--wlvbfy3t);
    --_145m1u3: var(--wlvbfy3u);
  }
  .x8h63ia {
    --_145m1u0: var(--wlvbfy40);
    --_145m1u1: var(--wlvbfy41);
    --_145m1u2: var(--wlvbfy43);
    --_145m1u3: var(--wlvbfy44);
  }
  .x8h63ic {
    font-size: var(--wlvbfy36);
    line-height: var(--wlvbfy37);
  }
  .x8h63id {
    font-size: var(--wlvbfy3g);
    line-height: var(--wlvbfy3h);
  }
  .x8h63ie {
    font-size: var(--wlvbfy3q);
    line-height: var(--wlvbfy3r);
  }
  .x8h63if {
    font-size: var(--wlvbfy40);
    line-height: var(--wlvbfy41);
  }
  .x8h63ii {
    --_145m1u0: var(--wlvbfy4d);
    --_145m1u1: var(--wlvbfy4e);
    --_145m1u2: var(--wlvbfy4g);
    --_145m1u3: var(--wlvbfy4h);
  }
  .x8h63ik {
    --_145m1u0: var(--wlvbfy4n);
    --_145m1u1: var(--wlvbfy4o);
    --_145m1u2: var(--wlvbfy4q);
    --_145m1u3: var(--wlvbfy4r);
  }
  .x8h63im {
    --_145m1u0: var(--wlvbfy4x);
    --_145m1u1: var(--wlvbfy4y);
    --_145m1u2: var(--wlvbfy50);
    --_145m1u3: var(--wlvbfy51);
  }
  .x8h63io {
    --_145m1u0: var(--wlvbfy57);
    --_145m1u1: var(--wlvbfy58);
    --_145m1u2: var(--wlvbfy5a);
    --_145m1u3: var(--wlvbfy5b);
  }
  .x8h63i1w {
    padding-top: calc((var(--wlvbfy9) - var(--wlvbfy37)) / 2);
    padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy37)) / 2);
  }
  .x8h63i1x {
    padding-top: calc((var(--wlvbfy9) - var(--wlvbfy3h)) / 2);
    padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy3h)) / 2);
  }
  .x8h63i1y {
    padding-top: calc((var(--wlvbfy9) - var(--wlvbfy3r)) / 2);
    padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy3r)) / 2);
  }
  .x8h63i1z {
    padding-top: calc((var(--wlvbfy9) - var(--wlvbfy41)) / 2);
    padding-bottom: calc((var(--wlvbfy9) - var(--wlvbfy41)) / 2);
  }
}
._1yakmwv0 {
  margin-bottom: -0.1em;
}
._1yakmwv2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow-wrap: break-word;
}
._1yakmwv0 ._1yakmwv2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1yakmwv4 {
    white-space: initial;
    -webkit-line-clamp: var(--_1yakmwv3);
    -webkit-box-orient: vertical;
    display: -webkit-box;
  }
}
.ueph6h6 {
  background: var(--ueph6h0);
}
.ueph6h7 {
  background: var(--ueph6h1);
}
.ueph6h8 {
  background: var(--ueph6h2);
}
.ueph6h9 {
  background: var(--ueph6h3);
}
.ueph6ha {
  background: var(--ueph6h4);
}
.ueph6hb {
  background: var(--ueph6h5);
}
html:not(._1sz747010) .ueph6hc {
  --ueph6h0: var(--wlvbfyw);
  --ueph6h1: var(--wlvbfyp);
  --ueph6h2: var(--wlvbfyu);
  --ueph6h3: var(--wlvbfyh);
  --ueph6h4: var(--wlvbfyj);
  --ueph6h5: var(--wlvbfyn);
}
html:not(._1sz747010) .ueph6hd {
  --ueph6h0: var(--wlvbfyx);
  --ueph6h1: var(--wlvbfyq);
  --ueph6h2: var(--wlvbfyv);
  --ueph6h3: var(--wlvbfyi);
  --ueph6h4: var(--wlvbfyk);
  --ueph6h5: var(--wlvbfyo);
}
html._1sz747010 .ueph6he {
  --ueph6h0: var(--wlvbfyw);
  --ueph6h1: var(--wlvbfyp);
  --ueph6h2: var(--wlvbfyu);
  --ueph6h3: var(--wlvbfyh);
  --ueph6h4: var(--wlvbfyj);
  --ueph6h5: var(--wlvbfyn);
}
html._1sz747010 .ueph6hf {
  --ueph6h0: var(--wlvbfyx);
  --ueph6h1: var(--wlvbfyq);
  --ueph6h2: var(--wlvbfyv);
  --ueph6h3: var(--wlvbfyi);
  --ueph6h4: var(--wlvbfyk);
  --ueph6h5: var(--wlvbfyo);
}
.ueph6hg {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}
.ueph6hh {
  width: var(--wlvbfye);
}
.ueph6hi {
  width: var(--wlvbfya);
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__1sz747010,html.sprinkles_darkMode__1sz747010 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__vxcqh90 typography_lightModeTone_light__x8h63i10 typography_darkModeTone_dark__x8h63i13">
+        <div class="reset_base__4zl4av0 sprinkles_paddingBottom_gutter_mobile__1sz74708p sprinkles_paddingTop_gutter_mobile__1sz74707l sprinkles_paddingLeft_gutter_mobile__1sz7470ax sprinkles_paddingRight_gutter_mobile__1sz74709t sprinkles_position_relative_mobile__1sz74705d sprinkles_borderRadius_large_mobile__1sz747069 sprinkles_textAlign_left_mobile__1sz7470i9 sprinkles_boxShadow_borderNeutralLight_lightMode__1sz74704j sprinkles_boxShadow_borderNeutral_darkMode__1sz74704c typography_lightModeTone_light__x8h63i10 typography_darkModeTone_dark__x8h63i13 sprinkles_background_surface_lightMode__1sz747033 sprinkles_background_surfaceDark_darkMode__1sz747036">
+          <span class="reset_base__4zl4av0 sprinkles_display_block_mobile__1sz74704x typography_fontFamily__x8h63i0 typography_fontWeight_regular__x8h63i1 typography_tone_neutral__x8h63i1t typography_textSize_large__x8h63ia capsize_capsizeStyle__145m1u4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
